# booking-a-stay-example

./: .gitignore  AGENTS.md  Cargo.toml  DOMAIN.md  PRINCIPLES.md  README.md
csharp-example/: BookingAStay.sln  README.md
guidelines/: 00_index.md  01_domain_capabilities.md  02_functional_core_imperative_shell.md  03_command_context_consistency.md  04_application_state_in_postgresql.md  05_event_oriented_results_without_an_event_store.md  06_command_contexts_and_commit_guards.md  07_database_constraints_where_they_fit.md  08_command_owned_sql.md  (+4 more)
rust-example/: Cargo.toml  README.md  config.toml
rust-example/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
rust-example/src/api/: health.rs  mod.rs  router.rs
rust-example/src/api/http/: book_stay.rs  health.rs  mod.rs  routes.rs
rust-example/src/application_state/: app_state.rs  mod.rs
rust-example/src/application_state/db/: migrations.rs  mod.rs
rust-example/src/capabilities/: mod.rs
rust-example/src/capabilities/book_stay/: context.rs  decide.rs  mod.rs  process.rs  request.rs  result.rs  sql.rs
rust-example/src/capabilities/book_stay/decide_tests/: availability.rs  confirmation.rs  date_range.rs  guest.rs  listing.rs  mod.rs  past_date.rs  stay_rules.rs
rust-example/src/db/: connection.rs  mod.rs
rust-example/src/providers/: bundle.rs  clock.rs  id_generator.rs  mod.rs
rust-example/src/telemetry/: mod.rs  subscriber.rs
rust-example/tests/: api_health_tests.rs  api_routes_tests.rs  capabilities.rs  telemetry_request_id_tests.rs
rust-example/tests/capabilities/book_stay/: process_tests.rs
(+46 files in other folders)
